# rag_bot

./: .env  .gitignore  CLAUDE.md  app.py  app_hybrid.py  auto_evaluation.py  check_grammar_types.py  check_wrong_classification.py  dataset(version2).py  donot.ipynb  evaluation.py  fusion_test.ipynb  inspect_chroma.py  knowledge_graph.json  merge_stt_ocr.py  new_data_preprocessing.py  package-lock.json  package.json  pipeline_ocr.py  practice_algorithm.ipynb  pyproject.toml  retranscribe.py  siwon_school(version_1).py  siwon_school.py  siwon_school_mvp.py  test1104.ipynb  test_hierarchy_search.py  video_knowledge_extractor.py
agent/: __main__.py  graph.ipynb  graph.py  state.py
lecture_db_5/: chroma.sqlite3
lecture_overlap/: chroma.sqlite3
streamlit_app/: app.py  app1.py  app2.py  app5_2.py  app6.py  app7.py  app8.py
youtube_playlist/: 01_NEW 이시원 강의 ｜ 한 달 만에 영어로 말문 트기 #29 ｜ 과거에 있었던 일 설명할 때  ｜ 기초 영어 회화.json  02_NEW 이시원 강의 ｜ 한 달 만에 영어로 말문 트기 #28 ｜ 마법과 같은 that ｜ 기초 영어 회화.json  03_NEW 이시원 강의 ｜ 한 달 만에 영어로 말문 트기 ##27 ｜ 수동태를 that과 연결하기! ｜ 기초 영어 회화.json  04_NEW 이시원 강의 ｜ 한 달 만에 영어로 말문 트기 #26 ｜ 수동태 핵심 파악! ｜ 기초 영어 회화.json  05_NEW 이시원 강의 ｜ 한 달 만에 영어로 말문 트기 #25 ｜ have를 깊이, 자연스럽게 ｜ 기초 영어 회화.json  06_NEW 이시원 강의 ｜ 한 달 만에 영어로 말문 트기 #24 ｜ 현재완료 ｜ 기초 영어 회화.json  07_NEW 이시원 강의 ｜ 한 달 만에 영어로 말문 트기 #23 ｜ that 뒤에 조동사 쓰기  ｜ 기초 영어 회화.json  08_NEW 이시원 강의 ｜ 한 달 만에 영어로 말문 트기 #22 ｜ that 뒤에 진행형을 가지고 만들어 보자  ｜ 기초 영어 회화.json  09_NEW 이시원 강의 ｜ 한 달 만에 영어로 말문 트기 #21 ｜ 또 다른 that ｜ 기초 영어 회화.json  10_NEW 이시원 강의 ｜ 한 달 만에 영어로 말문 트기 #20 ｜ that으로 문장을 길게! (3) ｜ 기초 영어 회화.json  (+20 more)
(+3 files in other folders)
