[project]
name = "rag-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "chromadb (>=1.3.2,<2.0.0)",
    "openai (>=2.7.1,<3.0.0)",
    "streamlit (>=1.51.0,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-huggingface (>=1.0.1,<2.0.0)",
    "langchain-chroma (>=1.0.0,<2.0.0)",
    "langchain-openai (>=1.0.2,<2.0.0)",
    "knowledge-extractor (>=0.0.2,<0.0.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.1.0"

