[tool.poetry]
name = "rag-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
chromadb = "^1.3.2"
openai = "^2.7.1"
streamlit = "^1.52.1"
langchain-core = "^0.3.0"
langchain-community = "^0.3.0"
langchain-huggingface = "^0.1.0"
langchain-chroma = "^0.2.0"
langchain-openai = "^0.3.0"
langgraph = "^0.2.0"
ragas = "^0.2.0"
datasets = "^3.0.0"
sentence-transformers = "^5.1.2"
torch = "^2.9.1"
torchvision = "^0.24.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
